<?xml version="1.0"?>
<package format="3">
  <name>exploration</name>
  <version>0.0.1</version>
  <description>Frontier-based exploration package for TurtleBot4.</description>

  <maintainer email="tpingouin@gmail.com">theo</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool dependency -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>irobot_create_msgs</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scikit-image</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-pyyaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
